# Inventory-Management-System

./: .gitignore  InventoryManagement_Caselet.session.sql  README.md  caselet.sqlite3  generated_models.py  pyproject.toml  requirements.txt
configuration/: serializers.py  settings.py  urls.py  views.py
customersapp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
customersapp/migrations/: 0001_initial.py  0002_alter_customer_options_alter_customergroup_options_and_more.py  0003_customer_owner_customergroup_owner.py  0004_rename_customer group name_customergroup_customer_group_name.py  0005_alter_customergroup_owner.py  0006_alter_customergroup_owner.py
productsapp/: admin.py  models.py  serializers.py  urls.py  views.py
productsapp/migrations/: 0001_initial.py  0002_product_owner.py  0003_category_owner_supplier_owner.py  0004_alter_product_product name.py  0005_remove_product_category_id_and_more.py  0006_remove_product_product category_and_more.py
